--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <h3>O numero secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
     <div id="chute" class="mensagem">
-    <script src="app/sortearNumero.js"></script>
-    <script src="app/reconhecimentoDeVoz.js"></script>
-    <script src="app/validacao.js"></script>
+    <script src="sortearNumero.js"></script>
+    <script src="reconhecimentoDeVoz.js"></script>
+    <script src="validacao.js"></script>
 </body>
 </html>
